Added PyBer Challenge code and weekly fares figure

--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -773,7 +773,7 @@
     "suburban_avg_fare = suburban_cities_df.groupby([\"city\"]).mean()[\"fare\"]\n",
     "\n",
     "# Get average fare for each city in the rural cities.\n",
-    "rural_avg_fare = rural_cities_df.groupby([\"city\"]).mean()[\"fare\"]"
+    "rural_avg_fare = rural_cities_df.groupby([\"city\"]).mean()[\"fare\"]\n"
    ]
   },
   {
@@ -800,7 +800,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a055623d48>"
+       "<matplotlib.legend.Legend at 0x15ee8ace2c8>"
       ]
      },
      "execution_count": 21,
@@ -846,7 +846,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a055791e88>"
+       "<matplotlib.legend.Legend at 0x15ee8bd26c8>"
       ]
      },
      "execution_count": 22,
@@ -892,7 +892,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a055819d88>"
+       "<matplotlib.legend.Legend at 0x15ee8c68088>"
       ]
      },
      "execution_count": 23,
@@ -2058,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -2266,7 +2266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2300,7 +2300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2313,7 +2313,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2326,7 +2326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2335,7 +2335,7 @@
        "63538.64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2348,7 +2348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2361,7 +2361,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2374,7 +2374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2387,7 +2387,7 @@
        "Name: fare, dtype: float64"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2400,7 +2400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2440,7 +2440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2453,7 +2453,7 @@
        "Name: ride_id, dtype: float64"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2466,7 +2466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2500,7 +2500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -2513,7 +2513,7 @@
        "Name: driver_count, dtype: float64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2526,7 +2526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
